Implementación de la API y frontend para la gestión de datos de países, estados y ciudades
- Creación del Dockerfile para la API en Python con Flask y PostgreSQL.
- Desarrollo de la API en `api.py` con endpoints para obtener información de países, estados y ciudades.
- Implementación del frontend en Flask con proxy para la API, incluyendo manejo de CORS.
- Adición de archivos de configuración y dependencias en `requirements.txt`.
- Creación de estilos CSS para el diseño del frontend.
- Implementación de la lógica de JavaScript para la interacción con la API y manejo de resultados.
- Desarrollo de plantillas HTML para la estructura del frontend, incluyendo módulos y secciones en desarrollo.
- Inclusión de un archivo SQL para la base de datos de países, estados y ciudades.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,6 @@ services:
       - POSTGRES_PASSWORD=supersecret
       - POSTGRES_DB=colombia
       - POSTGRES_USER=app
-    ports:
-      - "4002:5432"
     networks:
       base_masivas:
         ipv4_address: 172.18.0.3
@@ -45,6 +43,17 @@ services:
     networks:
       base_masivas:
         ipv4_address: 172.18.0.4
+  api:
+    build:
+      context: ./api
+      dockerfile: Dockerfile
+    container_name: api
+    ports:
+      - "8080:4000"
+    networks:
+      base_masivas:
+        ipv4_address: 172.18.0.5
+  
 
 
 networks:
