Refactor Dockerfiles and API configuration: update MySQL user credentials, streamline package installations, and remove unused SQL file.

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -3,20 +3,11 @@ FROM ubuntu
 ENV DEBIAN_FRONTEND=noninteractive
 
 
-# Actualizar sistema
 RUN apt update && apt upgrade -y
-
-# Instalar dependencias de compilación para mariadb
 RUN apt install -y build-essential libmariadb-dev-compat libmariadb-dev
-
-# Instalar MariaDB client y dependencias del sistema
 RUN apt install -y mariadb-client
-
-# Instalar dependencias de Python y PostgreSQL
 RUN apt install -y python3 python3-pip python3-flask python3-requests python3-psycopg2
-
-# Instalar paquetes Python para conectividad (solo mysql-connector-python)
-RUN apt install mysql-connector-python
+RUN apt install -y python3-mysql.connector
 
 # Crear directorio de trabajo
 WORKDIR /app
