--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,34 +1,34 @@
-FROM ubuntu
+FROM ubuntu:22.04
 
 ENV DEBIAN_FRONTEND=noninteractive
 
+# Actualiza paquetes
+RUN apt-get update && apt-get -y upgrade
 
-# Actualiza la imagen base de Ubuntu
-RUN apt update && apt -y upgrade
+# Instala MariaDB + Python + dependencias
+RUN apt-get install -y \
+    mariadb-server mariadb-client \
+    python3 python3-pip python3-dev libssl-dev \
+    python3-mysql.connector
 
-# Instala MySQL
-RUN apt-get update && apt-get install -y mysql-server
-RUN apt install -y python3
-RUN apt install -y python3-mysql.connector
-
+# Copia tus archivos
 COPY hoja_vida.sql /tmp/hoja_vida.sql
 COPY scripts.py /tmp/scripts.py
 COPY nueva_db.csv /tmp/nueva_db.csv
-# Inicializa el servicio de MySQL
-# Crea usuario y contraseña en MySQL
-RUN service mysql start && \
-    mysql -e "CREATE USER 'admin'@'%' IDENTIFIED WITH mysql_native_password BY 'admin123';" && \
-    mysql -e "GRANT ALL PRIVILEGES ON *.* TO 'admin'@'%' WITH GRANT OPTION;" && \
-    mysql -e "FLUSH PRIVILEGES;" && \
-    mysql -e "SOURCE /tmp/hoja_vida.sql;" && \
-    python3 /tmp/scripts.py && \
-    service mysql stop
 
-# Comando para permitir conexiones remotas (opcional)
-RUN sed -i "s/^bind-address\s*=.*/bind-address = 0.0.0.0/" /etc/mysql/mysql.conf.d/mysqld.cnf
-# Expone el puerto por defecto de MySQL
+# Configuración MariaDB: permitir conexiones remotas
+RUN sed -i "s/^bind-address\s*=.*/bind-address = 0.0.0.0/" /etc/mysql/mariadb.conf.d/50-server.cnf
+
+# Inicializa la base de datos y crea el usuario
+RUN service mariadb start && \
+    mariadb -e "CREATE USER 'admin'@'%' IDENTIFIED BY 'admin123';" && \
+    mariadb -e "GRANT ALL PRIVILEGES ON *.* TO 'admin'@'%' WITH GRANT OPTION;" && \
+    mariadb -e "FLUSH PRIVILEGES;" && \
+    mariadb < /tmp/hoja_vida.sql && \
+    service mariadb stop
+
+# Expone el puerto por defecto
 EXPOSE 3306
 
-# Mantiene el servicio de MySQL en ejecución
+# Mantiene MariaDB corriendo
 CMD ["mysqld_safe"]
-
