Enhance Dockerfile and scripts: add execution of data insertion script after database initialization, update SQL script comments, and improve data integrity checks in CSV processing.

--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -25,6 +25,7 @@ RUN service mariadb start && \
     mariadb -e "GRANT ALL PRIVILEGES ON *.* TO 'admin'@'%' WITH GRANT OPTION;" && \
     mariadb -e "FLUSH PRIVILEGES;" && \
     mariadb < /tmp/hoja_vida.sql && \
+    python3 /tmp/scripts.py && \
     service mariadb stop
 
 # Expone el puerto por defecto
