--- a/mariadb/Dockerfile
+++ b/mariadb/Dockerfile
@@ -9,7 +9,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 # Instala MariaDB
 RUN apt-get update && apt-get install -y mariadb-server
 
-COPY factura_db.sql /tmp/factura_db.sql
+COPY tienda.sql /tmp/tienda.sql
 # Configura MariaDB para permitir conexiones remotas
 RUN sed -i 's/bind-address.*=.*/bind-address = 0.0.0.0/' /etc/mysql/mariadb.conf.d/50-server.cnf || \
     echo 'bind-address = 0.0.0.0' >> /etc/mysql/mariadb.conf.d/50-server.cnf
@@ -19,7 +19,7 @@ RUN service mariadb start && \
     mariadb -e "CREATE USER 'admin'@'%' IDENTIFIED BY 'admin123';" && \
     mariadb -e "GRANT ALL PRIVILEGES ON *.* TO 'admin'@'%' WITH GRANT OPTION;" && \
     mariadb -e "FLUSH PRIVILEGES;" && \
-    mariadb -e "SOURCE /tmp/factura_db.sql;" && \
+    mariadb -e "SOURCE /tmp/tienda.sql;" && \
     service mariadb stop
 
 # Expone el puerto por defecto de MariaDB
